added description for sharing

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Deadshot</title>
+      
+    <meta property="og:title" content="Deadshot" />
+    <meta property="og:description" content="Deadshot is an open-source AI-based motion capture tool, running entirely in the web browser." />
+    <meta property="og:image" content="https://cjhosken.github.io/deadshot/logo.png" />
+    <meta property="og:url" content="https://cjhosken.github.io/deadshot/" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
